--- a/index.html
+++ b/index.html
@@ -87,6 +87,19 @@
     }
   }
 
+  function mostrarBotaoReiniciar() {
+    const reiniciarBtn = document.createElement("button");
+    reiniciarBtn.textContent = "🔄 Reiniciar";
+    reiniciarBtn.onclick = () => {
+      perguntaAtual = 0;
+      acertos = 0;
+      mostrarPergunta();
+      reiniciarBtn.remove();
+    };
+    feedbackEl.appendChild(document.createElement("br"));
+    feedbackEl.appendChild(reiniciarBtn);
+  }
+
   proximaBtn.onclick = () => {
     perguntaAtual++;
     if (perguntaAtual < perguntas.length) {
@@ -96,6 +109,7 @@
       opcoesEl.innerHTML = "";
       feedbackEl.textContent = mensagemFinal(acertos);
       proximaBtn.style.display = "none";
+      mostrarBotaoReiniciar();
     }
   };
 
